<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Chào mừng trở lại !"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Quản lý giá thầu, bán hàng và hơn thế nữa"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/showError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="40dp"
                android:text="Message"
                android:textSize="16sp"
                android:textColor="@color/red"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:errorEnabled="true"
                android:hint="@string/email"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/gray_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/icon_email"
                    android:drawablePadding="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                android:hint="@string/password"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray_light"
                app:boxStrokeColor="@color/gray_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/icon_lock"
                    android:drawablePadding="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lưu mật khẩu"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/forgot_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textColor="@color/blue"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textSize="16sp"/>

            <RelativeLayout
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/border_social_btn">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/google"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/icon_google"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnLoginFacebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_social_btn">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/facebook"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/icon_facebook"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bạn chưa có tài khoản?"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Đăng ký ngay"
                    android:layout_toEndOf="@id/question"
                    android:textSize="15sp"
                    android:textColor="@color/blue"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>